libhdate (0.16.3)
  
  * Try to fix date conversion bug, thanks Michael Kaminsky.

   -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 21 Feb 2005 09:93:12

libhdate (0.16.2)
  
  * Syntax error, and weeks calculation bug fixed by Michael Kaminsky.

   -- Yaacov Zamir <kzamir@wall.co.il>  Sun, 20 Feb 2005 06:53:12

libhdate (0.16.1)

  * Fix locale bug in int_to_string.
  * Add examples directory.
  * Minor bug fixes.

 -- Yaacov Zamir <kzamir@wall.co.il>  Sat, 19 Feb 2005 20:07:19